# yt-obsidian

./: LICENSE  flake.nix  pyproject.toml
src/yt_obsidian/: __init__.py  cli.py
