[project]
name = "yt-obsidian"
version = "0.1.0"
description = "YouTube to Obsidian converter with transcription"
requires-python = ">=3.12"
dependencies = [
  "yt-dlp",
  "pydub",
  "python-dotenv",
  "pyyaml",
  "litellm",
  "faster-whisper",
  "librosa",
  "numpy",
  "soundfile",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
transcribe = "yt_obsidian.cli:main"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"
